# AGENA_test

./: CMakeLists.txt  README.md  clean_build.bat  clean_build.sh  run_build.bat  run_tests.bat  run_tests.sh
include/shape/: rectangular.hpp  shape.hpp  shape_set.hpp  sphere.hpp  triangle.hpp
src/: sphere.cpp  triangle.cpp
test/: CMakeLists.txt  Example_test.cpp  RectangularTest.cpp  ShapeSetTest.cpp  SphereTest.cpp  TriangleTest.cpp
